added the screenshots + features

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 <h1 class="par"><a href="screenshots.html" style="text-decoration : none; color : grey;" class="mainlink"> ScreenShots </a></h1>
 
+<h1 class="par"><a href="feature.html" style="text-decoration : none; color : grey;" class="mainlink"> Features </a></h1>
+
 <div id="link1">
 <a href="http://designshack.net/" class="button">Unzip </a>
 </div>
