--- a/screenshots.html
+++ b/screenshots.html
@@ -9,9 +9,21 @@
 <h1> ScreenShots </h1>
 </div>
 
-	<img src="image.jpg" alt="Scene 1" id="image1">
-	<img src="image.jpg" alt="Scene 2" id="image2">
-	<img src="image.jpg" alt="Scene 3" id="image3">
+	<img src="images/menu.png" alt="menu" id="image1">
+	<img src="images/land.png" alt="Level 1" id="image2">
+	<img src="images/enemy.png" alt="Enemy" id="image3">
+
+	<img src="images/level2.png" alt="menu" id="image4">
+	<img src="images/enemy3.png" alt="Level 1" id="image5">
+	<img src="images/enemy2.png" alt="Enemy" id="image6">
+		<br>
+	<br>
+</div>
+
+	<div id="home2">
+		<a href="index.html"class="button"> Home</a>
+	</div>
+
 </body>
 
 </html>
