--- a/story.html
+++ b/story.html
@@ -11,8 +11,14 @@
 
 <div class="story">
 	<p>
-		This game is a 3D remake of our previous game : the orb. <br>The story starts with a shipwreck on a island.<br> You would need to find food, water and shelter to survive. <br> At night, monsters will begin to appear to appear and <br>you will need to fight back in order to survive. <br>The orb is a RPG shooter with two types of levels : day and night. <br>The player must defeat all the monsters to move on the next level.
+		You have survived your ordeal on the island against those <br> who would guard the orb
+		from you... <br> You have seen great thing in the orb and <br>using what you have seen, you have ammassed a great fortune.<br> You have brought your own island to call home <br> but unfortunately, the orb has a life of its own... <br> It has attracted ancient creatures<br> who wish to take it from you <br> <br>Defend yourself and the orb!
+		
 	</p>
+</div>
+
+<div id="home2">
+	<a href="index.html"class="button"> Home</a>
 </div>
 
 </body>
