--- a/inst.html
+++ b/inst.html
@@ -9,14 +9,20 @@
 <h1> How to play </h1>
 </div>
 
-<div class="instruction">
-	<p> Use joystick to control basic <br> movement in each direction <br>
-		Use **button to jump <br>
-	 Use **button to shoot missiles <br>
-	<br>
-	<br> You need to kill all enemies to move to the next level <br>
-</div>
 
+
+<div class="instruction">
+
+	<div id="right">
+		<p> The game is very simple <br> use the joystick to control basic <br> movement in each direction <br>
+			the button to shoot <br> and the upper right area to rotate.
+		<br>
+		<br> You need to kill all enemies to move to the next level <br>
+	</div>
+</div>
+<div id="home">
+	<a href="index.html"class="button"> Home</a>
+</div>
 </body>
 
 </html>
