adding the zip file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 
 <div id="link2">
-<a href="http://designshack.net/" class="button">Github </a>
+<a href="https://github.com/rohundhar/superhuman" class="button">Github </a>
 </div>
 </body>
 
