--- a/inst.html
+++ b/inst.html
@@ -13,6 +13,12 @@
 
 <div class="instruction">
 
+	<div>
+		Install spk tools <br> Unzip the folder <br> and do the following: </p>
+		<img src="images/command.png" alt="Enemy" id="image7">
+		<!--<p> adb install | folderpath | superhuman/superhuman/Assets/the_orb.apk </p> -->
+	</div>
+	<br>	
 	<div id="right">
 		<p> The game is very simple <br> use the joystick to control basic <br> movement in each direction <br>
 			the button to shoot <br> and the upper right area to rotate.
@@ -20,7 +26,7 @@
 		<br> You need to kill all enemies to move to the next level <br>
 	</div>
 </div>
-<div id="home">
+<div id="home2">
 	<a href="index.html"class="button"> Home</a>
 </div>
 </body>
