added link to zip

--- a/feature.html
+++ b/feature.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="feature">
-	This game is a 3D remake of our previous game : the orb. <br> The orb is a RPG shooter for android devices <br>with two types of levels. <br> <br> It incorporates the following
+	This game is a 3D remake of our previous game : the orb. <br> The orb is a RPG shooter for android devices (and only for android devices)<br>with two types of levels. <br> <br> It incorporates the following
 	features:<br>
 		Multiple scenes<br>
 		Music and sound effects<br>
