--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <h1 class="par"><a href="feature.html" style="text-decoration : none; color : grey;" class="mainlink"> Features </a></h1>
 
 <div id="link1">
-<a href="http://designshack.net/" class="button">Unzip </a>
+<a href="https://github.com/rohundhar/superhuman/tree/gh-pages/superhuman.zip%20(Unzipped%20Files)" class="button">Unzip </a>
 </div>
 
 <div id="link2">
